inventory-coolstore/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: coolstore
    app.openshift.io/runtime-version: "11"
  name: inventory-coolstore
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: inventory
status:
  loadBalancer: {}
